# sedgewick-cpp

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  Makefile  README.md  test.sh
include/psv/: array.h  calc.h  cli_graph.h  deque.h  list.h  point.h  queue.h  random_queue.h  stack.h  string.h
scripts/: build.sh  install-hooks.sh  memcheck.sh  pre-commit.sh  run-test-coverage.sh  run-test.sh  run-tests.sh  tests.sh  utils.sh
src/: CMakeLists.txt  utils.sh
src/chapter-1/: CMakeLists.txt  README.md  connectivity.cpp  ex.1.1.md  ex.1.10.md  ex.1.11.md  ex.1.16.cpp  ex.1.17.md  ex.1.2.md  ex.1.22.cpp  ex.1.22.md  ex.1.23.cpp  ex.1.23.md  ex.1.25.md  ex.1.26.md  ex.1.4.md  ex.1.5.md  ex.1.6.md  ex.1.7.md  ex.1.8.md  ex.1.9.md  program.1.1.cpp  program.1.2.cpp  program.1.3.cpp  program.1.4.cpp
src/chapter-3/: CMakeLists.txt  README.md  eratosthenes.h  ex.3.1.cpp  ex.3.10.cpp  ex.3.10.md  ex.3.11.bit.cpp  ex.3.11.char.cpp  ex.3.11.md  ex.3.11.sh  ex.3.12.cpp  ex.3.12.md  ex.3.13.cpp  ex.3.13.md  ex.3.14.cpp  ex.3.14.md  ex.3.14.sh  ex.3.15.check.cpp  ex.3.15.md  ex.3.15.no-check.cpp  ex.3.15.sh  ex.3.16.cpp  ex.3.17.cpp  ex.3.18.cpp  ex.3.19.cpp  ex.3.2.cpp  ex.3.2.md  ex.3.20.cpp  ex.3.21.cpp  ex.3.22.cpp  ex.3.23.cpp  ex.3.24.cpp  ex.3.26.cpp  ex.3.27.cpp  ex.3.28.md  ex.3.29.md  ex.3.29.sh  ex.3.3.cpp  ex.3.3.md  ex.3.30.cpp  (+58 more)
src/chapter-4/: CMakeLists.txt  README.md  ex.4.1.cpp  ex.4.10.md  ex.4.11.cpp  ex.4.12.md  ex.4.13.md  ex.4.14.cpp  ex.4.15.cpp  ex.4.16.md  ex.4.16.ps  ex.4.18.cpp  ex.4.2.cpp  ex.4.20.cpp  ex.4.21.cpp  ex.4.21.md  ex.4.25.cpp  ex.4.27.cpp  ex.4.29.cpp  ex.4.29.h  ex.4.3.cpp  ex.4.30.cpp  ex.4.30.h  ex.4.32.cpp  ex.4.32.h  ex.4.36.cpp  ex.4.36.md  ex.4.37.cpp  ex.4.37.md  ex.4.38.cpp  ex.4.39.cpp  ex.4.4.cpp  ex.4.40.cpp  ex.4.40.md  ex.4.41.md  ex.4.42.cpp  ex.4.43.h  ex.4.44.cpp  ex.4.45.cpp  ex.4.47.cpp  (+38 more)
src/chapter-5/: CMakeLists.txt  README.md  ex.5.1.cpp  ex.5.13.cpp  ex.5.14.cpp  ex.5.16.cpp  ex.5.17.cpp  ex.5.18.cpp  ex.5.19.cpp  ex.5.19.md  ex.5.2.cpp  ex.5.2.md  ex.5.22.cpp  ex.5.3.md  ex.5.33.md  ex.5.4.cpp  ex.5.4.md  ex.5.5.cpp  ex.5.6.cpp  ex.5.6.md  ex.5.7.md  ex.5.8.cpp  ex.5.8.md  program.5.12.cpp  program.5.13.cpp  program.5.2.cpp  program.5.6.h
src/extra/: CMakeLists.txt
test/: coverage.sh  program.1.1.test1.in  test.sh
test/chapter-1/: program.1.1.test1.out  program.1.1.test2.in
test/chapter-3/: ex.3.10.test1.out  ex.3.12.test1.out  ex.3.13.test1.args  ex.3.15.test1.out  ex.3.16.test1.in  ex.3.19.test1.args  ex.3.20.test1.args  ex.3.22.test1.args  ex.3.55.test1.in  ex.3.55.test1.out  ex.3.58.test1.in  ex.3.58.test1.out  ex.3.64.test1.out  ex.3.7.test1.in  ex.3.7.test2.in  ex.3.7.test2.out  ex.3.71.test1.out  ex.3.72.test1.out  program.3.10.test1.out  program.3.17.test1.in  program.3.17.test1.out  program.3.8.test1.args
test/chapter-4/: ex.4.1.test1.args  ex.4.20.test1.in  ex.4.20.test1.out  ex.4.47.test1.args  ex.4.47.test1.out  ex.4.70.test1.out  program.4.10.test2.out  program.4.17.test1.out  program.4.5.test1.in  program.4.6.test1.in  program.4.6.test1.out
test/chapter-5/: ex.5.2.test1.args  ex.5.6.test1.args  ex.5.8.test1.in  ex.5.8.test1.out
